...
}

class AddContactViewController: UIViewController {

    // MARK: - Outlet
    @IBOutlet weak var contactImageView: CircularImageView!
    @IBOutlet weak var selectImageButton: UIButton!
    @IBOutlet weak var contactTableView: UITableView!
    
    // MARK: - Weak Properties and Delgate
    weak var tableViewHeader: ContactEditTableViewHeader!
    weak var delegate: AddContactViewControllerDelegate?
    
...
